// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider renders correctly 1`] = `
<div
  className="home-slider home-slider--selected"
>
  <div
    className="slider-title"
  >
    Slider title
  </div>
  <div
    className="slider-items"
    style={
      Object {
        "transform": "translate(-320px, 0px)",
      }
    }
  >
    <div>
      SliderItem
    </div>
    <div>
      SliderItem
    </div>
    <div>
      SliderItem
    </div>
  </div>
</div>
`;

exports[`Slider renders correctly 2`] = `
<div
  className="home-slider"
>
  <div
    className="slider-title"
  >
    Slider title
  </div>
  <div
    className="slider-items"
    style={
      Object {
        "transform": "translate(0px, 0px)",
      }
    }
  >
    <div>
      SliderItem
    </div>
    <div>
      SliderItem
    </div>
    <div>
      SliderItem
    </div>
  </div>
</div>
`;

exports[`Slider renders correctly 3`] = `
<div
  className="home-slider"
>
  <div
    className="slider-title"
  >
    Slider title
  </div>
  <div
    className="slider-items"
    style={
      Object {
        "transform": "translate(0px, 0px)",
      }
    }
  >
    <div>
      SliderItem
    </div>
    <div>
      SliderItem
    </div>
    <div>
      SliderItem
    </div>
  </div>
</div>
`;

exports[`Slider renders correctly 4`] = `
<div
  className="home-slider home-slider--after-expanded"
>
  <div
    className="slider-title"
  >
    Slider title
  </div>
  <div
    className="slider-items"
    style={
      Object {
        "transform": "translate(0px, 0px)",
      }
    }
  >
    <div>
      SliderItem
    </div>
    <div>
      SliderItem
    </div>
    <div>
      SliderItem
    </div>
  </div>
</div>
`;
